force-app/main/default/objects/CustomerJourneys__mdt/CustomerJourneys__mdt.object-meta.xml
<CustomObject>
    <label>Customer Journey</label>
    <pluralLabel>Customer Journeys</pluralLabel>
</CustomObject>