force-app/main/default/objects/CustomerJourneys__mdt/fields/Entry_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Entry_Criteria__c</fullName>
    <label>Entry Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>