force-app/main/default/objects/CustomerJourneys__mdt/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>Template Id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>