force-app/main/default/objects/CustomerJourneys__mdt/fields/Trigger_Actions__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Actions__c</fullName>
    <label>Trigger Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>